2006-04-15  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/nsmain.c (Ns_Main): Copy executable name as memory is freed
	and reused later during Tcl initialisation.

	* nsd/tclcmds.c: Cache commands require a virtual server context.
	* nsd/tclcache.c: Don't artificially inflate flush stats when a
	Tcl script under evaluation errors.

	* nsd/cache.c:
	* tests/ns_cache.test: Clarify responsibilities of
	Ns_CacheCreateEntry, and Ns_CacheWaitCreateEntry. The first
	guarantees an Ns_Entry as a result and handles expirey, the second
	can return NULL only on timeout waiting for another thread to
	update the same entry.  Previously a simultaneous flush would also
	cause a NULL return -- now however the entry is recreated. Fix bug
	with ExpireEntry: unset the value but do not delete the entry.

2006-04-15  Vlad Seryakov  <seryakov@users.sf.net>

	* include/nsthread.h: Introduced new error code NS_FTAL
        * nsd/driver.c: Made handling UDP driver more reliably against
        QoS attacks and error handling.
        
2006-04-14  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/tclinit.c:
        * nsd/tclcmds.c: Added new Tcl command ns_tls for
        thread specific local caches. Tcl tls is ns_set structure,
        so thread specific storage is key value pairs.

2006-04-14  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* tests/ns_gifsize.test:
	* tests/ns_jpegsize.test: Fixed to match new error messages

	* nsd/cache.c: Fixed Ns_CacheWaitCreateEntry() NOT to delete
	existing cache entry in case entry is expired.
	This is one possible fix for this call, as it was trashing 
	memory by reusing already deleted (expired) entries before.
	Another possible fix is to delete and re-create expired
	entry, but this costs more time, although it may be a more
	correct thing to do.

2006-04-13  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/tclcache.c: make sure the value is zero ended

2006-04-13  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>
